--- a/css/style.css
+++ b/css/style.css
@@ -59,23 +59,23 @@ body {
 /* ============================ */
 .container {
   margin: 0 auto;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    width: 768px;
-    padding-left: 50px;
-    padding-right: 50px;
+    width: 76.8rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
 }
 
 @media screen and (min-width: 1440px) {
   .container {
-    width: 1440px;
-    padding-left: 153px;
-    padding-right: 153px;
+    width: 144rem;
+    padding-left: 15.3rem;
+    padding-right: 15.3rem;
   }
 }
 /* =========================== */
@@ -89,18 +89,29 @@ body {
   color: #fff;
 }
 
-/* ============================= */
-.header {
-  position: absolute;
-  top: 6.4rem;
-  left: 50%;
-  transform: translate(-50%, 0);
+.body-wrapper {
+  background-image: url("../img/background-1x.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-x: center;
+  background-position-y: center;
 }
+
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+  .body-wrapper {
+    background-image: url("../img/background-2x.webp");
+  }
+}
+
+/* ============================= */
 
 .header__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-top: 6.4rem;
   padding-bottom: 4.7rem;
 }
 
@@ -110,8 +121,6 @@ body {
 }
 
 .header__logo {
-  width: 7.9rem;
-  height: 2.9rem;
   margin-right: 3.9rem;
 }
 
@@ -123,22 +132,10 @@ body {
   display: flex;
 }
 
-.header__socials-icon {
-  width: 1.7rem;
-  height: 1.6rem;
-}
-
 .header__socials a:not(:first-child) {
   margin-left: 2rem;
 }
 /* =========================== */
-html {
-  background-image: url("../img/background-1x.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position-x: center;
-  background-position-y: top;
-}
 
 .main {
   /* прижимаем footer */
@@ -146,7 +143,7 @@ html {
 }
 
 .main__container {
-  padding-top: 18.7rem;
+  padding-top: 4.7rem;
   padding-bottom: 10.4rem;
 }
 
@@ -166,8 +163,6 @@ html {
 }
 
 .raiting__star {
-  width: 1.2rem;
-  height: 1.2rem;
   flex-shrink: 0;
   cursor: pointer;
 }
@@ -188,7 +183,6 @@ html {
   font-weight: 700;
   font-size: 7.6rem;
   line-height: 1.2;
-
   margin-bottom: 0.8rem;
 }
 
@@ -208,22 +202,16 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* margin-left: 315px; */
-  width: 100px;
-  height: 100px;
+  width: 10rem;
+  height: 10rem;
   border-radius: 50%;
   background: #151515;
-  border: 16px solid #391917;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border: 1.6rem solid #391917;
+  box-shadow: 0px 0.4rem 0.4rem rgba(0, 0, 0, 0.25);
   cursor: pointer;
 }
 
-.main__button-play img {
-  width: 35px;
-  height: 40px;
-}
-
-.main__button {
+.main__button-buy {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -231,8 +219,7 @@ html {
   padding: 2.2rem 7.2rem;
   margin-bottom: 8.8rem;
   background-color: #151515;
-  border-radius: 8px;
-
+  border-radius: 0.8rem;
   font-weight: 700;
 }
 
@@ -265,11 +252,13 @@ html {
 }
 
 .main__slider-arrow {
-  width: 3.2rem;
-  height: 2.2rem;
   margin-left: 2.8rem;
   flex-shrink: 0;
   cursor: pointer;
+}
+
+.icon-arrow {
+  fill: #fff;
 }
 
 /* =========================== */
@@ -319,13 +308,14 @@ html {
 }
 
 .modal__inner {
-  width: 700px;
-  height: 500px;
+  width: 70rem;
+  height: 50rem;
 }
 
 .modal.active {
   display: flex;
 }
+
 /* ===================== */
 .menu-toggle-open {
   display: none;
@@ -333,11 +323,11 @@ html {
 
 .menu-container {
   position: fixed;
-  top: -64px;
-  left: 0px;
-  width: 250px;
-  height: 263px;
-  padding: 40px;
+  top: 0px;
+  right: 0px;
+  width: 25rem;
+  height: 26.3rem;
+  padding: 4rem 8.5rem 4rem 8.5rem;
   background-color: #151515;
   z-index: 50;
 
@@ -355,12 +345,12 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 40px;
-  min-width: 40px;
+  min-height: 2.3rem;
+  min-width: 2.3rem;
   background-color: transparent;
   position: absolute;
-  top: 10px;
-  right: 15px;
+  top: 4rem;
+  right: 4rem;
 }
 
 .mobile-menu {
@@ -371,8 +361,19 @@ html {
   justify-content: space-between;
 }
 
+.mobile-menu__logo {
+  width: 7.9rem;
+  height: 2.9rem;
+  margin-bottom: 3.5rem;
+}
+
 .mobile-menu__socials {
   display: flex;
+  margin-bottom: 2.2rem;
+}
+
+.mobile-menu__socials a:not(:first-child) {
+  margin-left: 2rem;
 }
 
 .mobile-menu__nav {
@@ -381,10 +382,21 @@ html {
   align-items: center;
 }
 
+.mobile-menu__nav a:not(:last-child) {
+  margin-bottom: 1.7rem;
+}
+
 /* Стили для mobile */
 @media screen and (max-width: 767px) {
-  html {
-    background-position-x: 65%;
+  .body-wrapper {
+    background-position-x: 64%;
+  }
+
+  .header__container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-top: 2.4rem;
   }
 
   .header__menu,
@@ -395,10 +407,10 @@ html {
 
   .menu-toggle-open {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
-    min-height: 40px;
-    min-width: 40px;
+    min-height: 4rem;
+    min-width: 4rem;
     background-color: transparent;
   }
 
@@ -449,7 +461,7 @@ html {
   }
 
   .modal__inner {
-    width: 300px;
-    height: 200px;
+    width: 30rem;
+    height: 20rem;
   }
 }
